Aress7/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Quote_PDF_Sent__c</fullName>
        <label>Quote PDF Sent</label>
        <summarizedField>Quote.Number_of_Quotes_Presented__c</summarizedField>
        <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quote_less_than_List_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote less than List Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_to_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready to Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Closing__c</fullName>
        <label>Reason for Closing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Closing_picklist__c</fullName>
        <label>Reason for Closing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>No Budget</fullName>
                </value>
                <value>
                    <fullName>Didn&apos;t Win Tender</fullName>
                </value>
                <value>
                    <fullName>User Error</fullName>
                </value>
                <value>
                    <fullName>Customer Error</fullName>
                </value>
                <value>
                    <fullName>System Error</fullName>
                </value>
                <value>
                    <fullName>No Contact</fullName>
                </value>
                <value>
                    <fullName>Customer Refunded</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refund?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Route_to_Market__c</fullName>
        <formula>TEXT(Account.Route_to_Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Route to Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date_Time_Install__c</fullName>
        <label>Scheduled Date &amp; Time(Install)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date_Time__c</fullName>
        <label>Scheduled Date &amp; Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scope_of_Work_2__c</fullName>
        <label>Scope of Work 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scope_of_Work_Install__c</fullName>
        <label>Scope of Work(Install)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scope_of_Work__c</fullName>
        <label>Scope of Work 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country_Picklist__c</fullName>
        <label>Shipping Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Postal_Code__c</fullName>
        <label>Shipping Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sockets__c</fullName>
        <label>Total Sockets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Install__c</fullName>
        <label>Install Status (old)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Survey__c</fullName>
        <label>Survey Status (old)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Install__c</fullName>
        <label>Street(Install)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Status__c</fullName>
        <label>Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Quoted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_C_Agreed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;C Agreed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Bonus__c</fullName>
        <label>Total Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Exc_VAT__c</fullName>
        <label>Amount excluding VAT</label>
        <summarizedField>OpportunityLineItem.ListPrice</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type_Install__c</fullName>
        <label>Type(Install)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Amount2__c</fullName>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT_Amount__c</fullName>
        <formula>Amount - Amount*5/6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vehicle_Condition__c</fullName>
        <formula>Account.Vehicle_Condition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_End_Year__c</fullName>
        <formula>Account.Vehicle_End_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle End Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make__c</fullName>
        <formula>Account.Vehicle_Make__c</formula>
        <label>Vehicle Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <formula>Account.Vehicle_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Purchase_Option__c</fullName>
        <formula>Account.Vehicle_Purchase_Option__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Purchase Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Start_Year__c</fullName>
        <formula>Account.Vehicle_Start_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Start Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workplace_Grant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workplace Grant</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpp</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Dealer_Email__c</field>
            <operation>equals</operation>
            <value>sallyanntanner@westovergroup.co.uk</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>3/31/2018</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>gnich</value>
        </filters>
        <label>Closing Next Month</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>gnich</value>
        </filters>
        <label>Closing This Month</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contractor_Opps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Type__c</field>
            <operation>equals</operation>
            <value>contractor</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open Contractor Opps</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Destination</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Type__c</field>
            <operation>contains</operation>
            <value>destination</value>
        </filters>
        <label>Destination</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Install_Opportunities</fullName>
        <columns>Completed_On__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSED</columns>
        <columns>OPPORTUNITY.WON</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.EXP_AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Commercial</value>
        </filters>
        <filters>
            <field>Managed_Installation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Install Opportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Kim_Check</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Date_of_COPS_Approved__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Current_Step__c</columns>
        <columns>Ordering_Tool_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Qualified</value>
        </filters>
        <filters>
            <field>Current_Step__c</field>
            <operation>contains</operation>
            <value>field</value>
        </filters>
        <label>Kim Check</label>
        <language>en_US</language>
        <sharedTo>
            <group>HC_Sales_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>Account_Type__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Oportunity_Type__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Lost</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Invoiced</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Won</value>
        </filters>
        <label>My Opportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Completed_Surveys</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Project_Manager__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Survey Completed,Survey Incomplete</value>
        </filters>
        <label>My Completed Surveys</label>
        <language>en_US</language>
        <sharedTo>
            <role>Regional_Account_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>homecharge</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Norway_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Home_Charge_Norway</value>
        </filters>
        <label>Norway Opportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open_Home_Charge_Leads</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Qualification,Developing Proposal,Awaiting Sign Off,Negotiation</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>Homecharge -</value>
        </filters>
        <label>Open Home Charge Oportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Opportunities_Ready_to_Invoice</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_Invoice__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Opportunity.Commercial</value>
        </filters>
        <label>Opportunities (Ready to Invoice)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>UpSell_Nissan</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vehicle_Model__c</field>
            <operation>contains</operation>
            <value>Leaf</value>
        </filters>
        <label>UpSell Nissan</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Bid</fullName>
        <active>true</active>
        <businessProcess>Commercial</businessProcess>
        <label>Bid</label>
    </recordTypes>
    <recordTypes>
        <fullName>Commercial</fullName>
        <active>true</active>
        <businessProcess>Commercial</businessProcess>
        <label>Commercial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Home_Charge</fullName>
        <active>true</active>
        <businessProcess>Home Charge</businessProcess>
        <label>Home Charge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Home_Charge_Norway</fullName>
        <active>true</active>
        <businessProcess>Home Charge Norway</businessProcess>
        <label>Home Charge Norway</label>
    </recordTypes>
    <recordTypes>
        <fullName>Online_Payment</fullName>
        <active>true</active>
        <businessProcess>Agent%2FDeveloper</businessProcess>
        <label>Online Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Type_Account</fullName>
        <active>false</active>
        <businessProcess>Other Type Accounts</businessProcess>
        <label>Other Type Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project</fullName>
        <active>true</active>
        <businessProcess>CommercialMasterBid</businessProcess>
        <label>Master Bid</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Actual_Dealer_mandatory_if_POD_Point</fullName>
        <active>false</active>
        <description>When &quot;POD Point Dealership&quot; selected then there has to be some value from picklist selected in &quot;Actual Dealership&quot;</description>
        <errorConditionFormula>AND( TEXT(Actual_Dealership__c) =&apos;&apos;,Dealership__c = &apos;POD Point Dealership&apos;)</errorConditionFormula>
        <errorMessage>Please choose an actual dealership from the list.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_has_one_accepted_quote</fullName>
        <active>true</active>
        <description>Opportunity status can be changed to Won if it has atleast one accepted quote.</description>
        <errorConditionFormula>AND
(
TEXT(StageName)=&apos;Won&apos;,
No_of_Accepted_Quote__c = 0,
Flag__c =False,
RecordTypeId == &apos;01224000000AvtQ&apos;,
NOT(ISCHANGED(Flag__c ))
)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>The status cannot be changed to Won since there is no accepted quote for this opportunity,</errorMessage>
    </validationRules>
</CustomObject>